<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical"

    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wifiActivity"
        android:textColor="#000000"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wifi_ssid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/wifi_ssid"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/wifi_ssid_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_toRightOf="@id/wifi_ssid"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/wifi_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/wifi_pwd"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/wifi_pwd_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_ssid_tv"
                android:layout_margin="15dp"
                android:layout_toRightOf="@id/wifi_pwd"
                android:layout_weight="1"
                android:hint="@string/input_pwd_hint"
                android:padding="10dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="【WIFI连接成功】后，测试语音，如果不能发出声音，请重新启动设备2~3次！"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_link"
            android:text="@string/wifi_link"
            android:textSize="16sp"></Button>

        <Button
            android:id="@+id/connect_back_wifiactivity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_back"
            android:text="@string/back"
            android:textSize="16sp"></Button>
    </LinearLayout>

</LinearLayout>