<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:weightSum="10">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wifiActivity"
            android:textColor="#000000"
            android:textSize="@dimen/title_text_size" />

    <LinearLayout
            android:id="@+id/wifi_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/search_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_serach"
                android:text="搜索附近WIFI"></Button>

            <Button
                android:id="@+id/wifi_back_systembase"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_back"
                android:text="@string/back" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_close"
                android:onClick="closeWiFi"
                android:text="@string/wifi_close" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_open"
                android:onClick="openWiFi"
                android:text="@string/wifi_open" />
        </LinearLayout>

        <ListView
            android:id="@+id/wifi_lv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/wifi_linearlayout"
            android:layout_marginTop="10dp"
            android:layout_weight="6"
            android:divider="#d1d1d1"
            android:dividerHeight="1px"
            android:scrollbars="none"></ListView>
    </LinearLayout>


