<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    android:background="#2f7d67">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#2f7d67">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/MainActivity_main_systemCorrelation"
        android:textColor="#000000"
        android:textSize="@dimen/title_text_size"
        android:background="#2f7d67"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="9"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="#2f7d67">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="#2f7d67">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/goodshelves"
                android:clickable="true"
                android:onClick="operationManagementActivity">

                <!--    <ImageView
                    android:id="@+id/main_invoice"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />
-->
                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/operationManagementActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/inventory"
                android:clickable="true"
                android:onClick="operationDataActivity">

                <!--      <ImageView
                    android:id="@+id/main_motorcycle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />-->

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/operationDataActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/administrators"

                android:clickable="true"
                android:onClick="authorActivity">
                <!--
                <ImageView
                    android:id="@+id/main_delivery_man"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />-->

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/authorActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="#2f7d67">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/addshelves"
                android:clickable="true"
                android:onClick="shelvesManagementActivity">

                <!--             <ImageView
                    android:id="@+id/main_warehouse"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />-->

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/shelvesManagementActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/internet"
                android:clickable="true"
                android:onClick="internetInformationActivity">

                <!--      <ImageView
                        android:id="@+id/main_motorcycle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="30dp" />-->

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/internetInformationActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/test"

                android:clickable="true"
                android:onClick="testActivity">
                <!--
                    <ImageView
                        android:id="@+id/main_delivery_man"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="30dp" />-->

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/testActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="#2f7d67">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/updateapp"
                android:clickable="true"
                android:onClick="updateapp">

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="软件更新"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>


            <!--   <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/updatepasword"
                android:clickable="true"
                android:onClick="updatePassword">

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/updatePassword"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>-->


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/wifi"
                android:clickable="true"
                android:onClick="wifiActivity">

                <!--    <ImageView
                        android:id="@+id/main_invoice"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="30dp" />
    -->
                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/wifiActivity"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>


            <RelativeLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="30dp"

                android:layout_weight="1"
                android:background="@drawable/main_back"
                android:clickable="true"
                android:onClick="back_to_main">

                <!--             <ImageView
                    android:id="@+id/main_warehouse"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />-->

                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

    <!--
    </LinearLayout>
    -->

