<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#2f7d67">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="#2f7d67">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#2f7d67">

        <Button
            android:id="@+id/btn2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:background="@drawable/main_close"
            android:onClick="closeWiFi"
            android:text="@string/wifi_close" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:background="@drawable/main_open"
            android:onClick="openWiFi"
            android:text="@string/wifi_open" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2f7d67">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:text="WiFi列表"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="#2f7d67"/>

        <ProgressBar
            android:id="@+id/pb_wifi_loading"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recy_list_wifi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="#2f7d67">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical|center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#2f7d67">

        <Button
            android:id="@+id/wifi_back_systembase"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp"
            android:background="@drawable/main_back"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>
