<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#2f7d67"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/shelvesManagement_LinearLayout"
        android:weightSum="10"
        android:background="#2f7d67">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shelvesManagementActivity"
            android:textSize="@dimen/title_text_size"
            android:background="#2f7d67"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:tag="1" />


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal"
        android:background="#2f7d67">

            <RelativeLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/main_add"
                android:clickable="true"
                android:onClick="shelvesManagement_add">

                <!--    <ImageView
                    android:id="@+id/main_invoice"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />
-->
                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/addSheves"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/main_back"
                android:clickable="true"
                android:onClick="update_system_baseinfo">

                <!--    <ImageView
                    android:id="@+id/main_invoice"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />
-->
                <TextView
                    style="@style/home_text_view"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

