<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#2f7d67">

    <!--android:background="@mipmap/systemset1"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        tools:ignore="UselessLeaf"
        android:background="#2f7d67">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/internetInformationActivity"
        android:textColor="#000000"
        android:textSize="@dimen/title_text_size"
        android:background="#2f7d67"/>

    <LinearLayout
        android:id="@+id/update_system_baseinfo_xml"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="#2f7d67"
        >

        <TextView
            android:id="@+id/update_pass_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="#000000"
            android:textSize="25sp"
            android:background="#2f7d67"/>

        <EditText
            android:id="@+id/update_pass_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:elevation="20dp"
            android:ems="15"
            android:inputType="text|textMultiLine"
            android:textSize="24sp"
            tools:ignore="UnusedAttribute" />

<!--        <Spinner
            android:id="@+id/spinnercomno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#2f7d67"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#2f7d67"
        >

        <RelativeLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/main_save"
            android:clickable="true"
            android:onClick="system_baseinfo_update_save">

            <!--    <ImageView
                    android:id="@+id/main_invoice"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />
-->
            <TextView
                style="@style/home_text_view"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/main_back"
            android:clickable="true"
            android:onClick="update_system_baseinfo">

            <!--    <ImageView
                    android:id="@+id/main_invoice"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="30dp" />
-->
            <TextView
                style="@style/home_text_view"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
